[gd_scene load_steps=5 format=2]

[ext_resource path="res://PrepStation/StationArea/StationArea.gd" type="Script" id=1]
[ext_resource path="res://PrepStation/StationArea/compost_bowl.png" type="Texture" id=2]
[ext_resource path="res://Common/GlowingArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://PrepStation/CarrotPiece/NewCarrotFrond.png" type="Texture" id=4]

[node name="CompostBowl" type="Node2D"]
script = ExtResource( 1 )

[node name="GlowingArea" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="NewCarrotFrond2" type="Sprite" parent="."]
position = Vector2( -4.00001, -52 )
rotation = 0.656244
scale = Vector2( 0.72, 0.72 )
texture = ExtResource( 4 )

[node name="NewCarrotFrond" type="Sprite" parent="."]
position = Vector2( -45, 14 )
rotation = -0.328122
scale = Vector2( 0.72, 0.721 )
texture = ExtResource( 4 )

[node name="NewCarrotFrond3" type="Sprite" parent="."]
position = Vector2( 22, 47 )
rotation = -2.95135
scale = Vector2( 0.72, 0.721 )
texture = ExtResource( 4 )
