[gd_scene load_steps=4 format=2]

[ext_resource path="res://PrepStation/StationArea/StationArea.gd" type="Script" id=1]
[ext_resource path="res://PrepStation/StationArea/done_bowl.png" type="Texture" id=2]
[ext_resource path="res://Common/GlowingArea.tscn" type="PackedScene" id=3]

[node name="DoneBowl" type="Node2D"]
script = ExtResource( 1 )

[node name="GlowingArea" parent="." instance=ExtResource( 3 )]
visible = false
modulate = Color( 0, 1, 0, 1 )
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
